1.0.7
Issue #1299 wait for symbol file to be available in container
Add parameter AssignPremiumPlan to Run-AlPipeline

1.0.6
Add 3 new values for Select: Current, NextMinor and NextMajor for selecting artifacts. SasToken needs to be provided for NextMajor and NextMinor
Publish-BcContainerApp now supports .zip files. All .app files in the .zip file are published in alphabetic order
Run-AlPipeline to add sequence numbers (dependencies) to apps in artifacts if more than one app is added

1.0.5
Added PREVIEW function Run-AlPipeline
Issue #1252 do not return artifact url for artifacts without platform (unless -doNotCheckPlatform is specified)
Issue #1263 new-bccontainertenant freezes if -updatehosts isn't specified
Add switch -includePerformanceToolkit to Import-TestToolkitToBcContainer and New-BcContainer
Support for -includePerformanceToolkit in New-BcContainerWizard
Support for insider builds and sasToken in New-BcContainerWizard
Add NAV to New-BcContainerWizard
Add AL Language Extension version selection to New-BcContainerWizard
Flush-ContainerHelperCache will remove images, which was built on artifacts, which is no longer in the cache

1.0.4
Sort-AppFoldersByDependencies doesn't support custom Application app (needs to be sorted first)
Add parameter -addFontsFromPath to New-BcContainer and New-BcImage
Increase performance of Add-FontsToBcContainer
Ensure that Import-TestToolkitToBcContainer can be called repeatedly
Include TestToolkit in cached image if possible
Add parameter -forceRebuild to New-NavContainer to force a rebuild of a cached image
Pull new generic if not at least 0.1.0.16 (to ensure download fixes)
Add/Remove hostnames for tenants to hosts file when multitenancy and -updatehosts
New-BcContainerWizard to support -includeAL and -multitenant
Added new function Set-BcContainerFeatureKeys to enable/disable feature keys in tenant databases
Add parameter -featureKeys to New-BcContainer to enable/disable feature keys in all tenants in new container