@@ -245,10 +245,27 @@ function New-BcContainer {
         [scriptblock] $finalizeDatabasesScriptBlock
     )
 
-    (Get-ContainerHelperConfig).defaultNewContainerParameters.GetEnumerator() | % {
-        if (!($PSBoundParameters.ContainsKey($_.Name))) {
-            Write-Host "Default parameter $($_.Name) = $($_.Value)"
-            Set-Variable -name $_.Name -Value $_.Value
+    $defaultNewContainerParameters = (Get-ContainerHelperConfig).defaultNewContainerParameters
+    if ($defaultNewContainerParameters -is [HashTable]) {
+        $defaultNewContainerParameters.GetEnumerator() | ForEach-Object {
+            if (!($PSBoundParameters.ContainsKey($_.Name))) {
+                Write-Host "Default parameter $($_.Name) = $($_.Value)"
+                Set-Variable -name $_.Name -Value $_.Value
+            }        
+        }
+    }
+    elseif ($defaultNewContainerParameters -is [PSCustomObject]) {
+        $defaultNewContainerParameters.PSObject.Properties | ForEach-Object {
+            if (!($PSBoundParameters.ContainsKey($_.Name))) {
+                if ($_.Name -eq "Credential") {
+                    Write-Host "Default parameter $($_.Name)"
+                    Set-Variable -Name $_.Name -Value (New-Object pscredential -ArgumentList $_.Value.Username, ($_.Value.Password | ConvertTo-SecureString))
+                }
+                else {
+                    Write-Host "Default parameter $($_.Name) = $($_.Value)"
+                    Set-Variable -name $_.Name -Value $_.Value
+                }
+            }
         }        
     }
 
